Updated Chapter 5.1 and some 6.2
- Updated phoneme to syllable in code
- Added information to Mimic Home
- Added unknown label

--- a/mimic-app/app/collect/home.html
+++ b/mimic-app/app/collect/home.html
@@ -4,7 +4,7 @@
   <h1> Collect Data </h1>
   <hr />
   <h4> say when 'record' button change to 'say now' </h4>
-  <h4> list : a - i - t - na - ma - mu - di - ri - ku </h4>
+  <h4> list : a - i - t - na - ma - mu - di - ri - ku - kan - unknown </h4>
   <h4> speech recorded in 1 second </h4>
   <h4> sample rate : 16000 </h4>
   <button id='btnStart'>Start</button>
