--- a/mimic-app/app/mimic/home.html
+++ b/mimic-app/app/mimic/home.html
@@ -3,6 +3,8 @@
 <body>
   <h1> Mimic Speech </h1>
   <hr />
+  <h4> Identify Speech to save and identify your speech data corresponding to registered syllable </h4>
+  <h4> Genearte Speech to generate speech based on saved speech data </h4>
   <button id='btnIdentify'>Identify Speech</button></Link>
   <button id='btnGenerate'>Generate Speech</button></Link>
   <br />
