--- a/mimic-app/app/mimic/generate.html
+++ b/mimic-app/app/mimic/generate.html
@@ -3,12 +3,12 @@
 <body>
   <h1> Mimic Speech </h1>
   <div>
-    <input list='listSpeechData' />
-    <datalist id='listSpeechData'></datalist>
+    <input id ='inSpeechId' list='listSpeechId' />
+    <datalist id='listSpeechId'></datalist>
   </div>
   <div>
     <br />
-    <textarea placeholder='Write some Indonesia words!' rows='4' cols='50'></textarea>
+    <textarea id='txtAreaText' placeholder='Write some Indonesia words!' rows='4' cols='50'></textarea>
     <br />
   </div>
   <div>
