Replaced RecordRTC script src
- Deleted t syllable
- Updated Figures that contain t
- Minor Fixed

--- a/mimic-app/app/collect/unknown.html
+++ b/mimic-app/app/collect/unknown.html
@@ -9,7 +9,7 @@
   </div>
   <button id='btnNext'>Next</button>
 
-  <script src='https://cdn.webrtc-experiment.com/RecordRTC.js'></script>
+  <script src='./../../node_modules/recordrtc/RecordRTC.min.js'></script>
   <script src='./script/upload.js'></script>
   <script src='./script/unknown.js'></script>
 </body>
