--- a/mimic-app/app/mimic/identify.html
+++ b/mimic-app/app/mimic/identify.html
@@ -6,8 +6,8 @@
     <input id='inSpeechId' placeholder='Speech ID' />
   </div>
   <div>
-    <p>a - i - t - na - ma</p>
-    <p>mu - di - ri - ku - kan</p>
+    <p>a - i - na - ma - mu</p>
+    <p>di - ri - ku - kan</p>
   </div>
   <div>
     <audio></audio>
